* Optimize Event.pointerX() and Event.pointerY() to calculate one coordinate instead of both. [#403 state:resolved] [jddalton, Nick Stakenburg]

* Optimize Element#getWidth and Element#getHeight to calculate one dimension instead of both. [jddalton]

* Add helper methods Element.(_getCssDimensions|_getCssWidth|_getCssWidth) to reduce repeated code. [jddalton]

* Add helper method Element._hasLayout to reduce repeated code. [jddalton]

* Add helper method Element._getRealOffsetParent to ensure offsetParent is accurate and prevent errors in Element#(cumulativeOffset|positionedOffset|viewportOffset). Closes #9416, #10192, #10248. [jddalton, kangax, psiborg, ronstoney]

* Stop Element#getOffsetParent from erroring in IE if the element isn't attached to the document. [jddalton, Tobie Langel]

* Fix IE issue with Element#getOffsetParent returning documentElement on some relatively positioned elements when using a strict doctype. [#90 state:resolved] [jddalton, Nick Stakenburg]

* Ensure Element#readAttribute works properly when accessing the invalid "type" attribute of an iframe. [#118 state:resolved] [Zekid, kangax]

* unit test: Add support for the Chrome browser in jstest.rb. [Andrew Dupont]

* Refactor Element#setOpacity to refine browser sniffs and move forked versions closer together. [jddalton]

* Refactor Element#update to remove browser sniffs. [jddalton]

* Optimize Element#(insert|update|replace) using a document fragment. [jddalton]

* Refactor Element#replace to remove browser sniffs. [jddalton]

* Fix IE issue with Element#replace removing childNodes of the returned element. Closes #11225. [Rukawa, jddalton]

* Refactor the Element constructor to remove browser sniffs. [jddalton]

* Ensure setting type attribute for button/input elements works in IE when using the Element constructor. Closes #10548. [jddalton, sakarit]

* Ensure Element#getStyle returns values in px unit, regardless of how they are set. [Andrew Dupont, jddalton]
